--- a/sir-koa/package.json
+++ b/sir-koa/package.json
@@ -19,6 +19,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "koa2-request": "^1.0.4",
+    "mysql": "^2.18.1",
     "pug": "^2.0.3"
   },
   "devDependencies": {
