--- a/sir-koa/package.json
+++ b/sir-koa/package.json
@@ -12,6 +12,7 @@
     "debug": "^4.1.1",
     "ioredis": "^4.17.3",
     "koa": "^2.7.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
